--- a/css/style.css
+++ b/css/style.css
@@ -2307,19 +2307,16 @@ html.has-scroll-dragging {
 }
 
 .header__consultation_burger {
-  position: relative;
-  top: 0;
-  right: 0;
-  z-index: 1;
-}
-
-.header__consultation_burger {
   display: block;
   width: 24px;
   height: 24px;
   padding: 20px;
   border: none;
   border-radius: 50%;
+  position: relative;
+  top: 0;
+  right: 0;
+  z-index: 1;
 }
 
 .header__consultation_burger svg {
@@ -5729,7 +5726,8 @@ html.has-scroll-dragging {
   border-radius: 10px;
 }
 
-.form__file_item button {
+.form__file_item button,
+.form__file_item a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -6215,7 +6213,7 @@ html.has-scroll-dragging {
   display: flex;
   width: 100%;
   height: max-content;
-  min-height: calc(100vh - 80px);
+  min-height: var(--height);
   padding: 80px 0;
   flex-direction: column;
   justify-content: center;
@@ -6259,6 +6257,36 @@ html.has-scroll-dragging {
 
 .career_popup__head {
   padding: 0 0 50px;
+}
+
+.career_popup__close {
+  display: block;
+  width: 48px;
+  height: 48px;
+  border: none;
+  border-radius: 50%;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  z-index: 1;
+}
+
+.career_popup__close svg {
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: var(--text);
+  -webkit-transform: translate(-50%, -50%) rotate(0deg);
+  transform: translate(-50%, -50%) rotate(0deg);
+  -webkit-transition: -webkit-transform 0.3s linear, color 0.3s linear;
+  transition: transform 0.3s linear, color 0.3s linear;
+}
+
+.career_popup__close:hover svg {
+  -webkit-transform: translate(-50%, -50%) rotate(90deg);
+  transform: translate(-50%, -50%) rotate(90deg);
 }
 
 /* end career */
@@ -6594,6 +6622,12 @@ html.has-scroll-dragging {
   }
   .career_bottom__list {
     padding: 0 60px 40px;
+  }
+  .career_popup__blocks {
+    padding: 80px 0px;
+  }
+  .career_popup__container {
+    padding: 0px 60px;
   }
   .footer__list,
   .footer__social {
@@ -7090,6 +7124,15 @@ html.has-scroll-dragging {
     padding: 0 30px 40px;
   }
   .career_bottom__list ul {
+    padding: 0;
+  }
+  .career_popup__blocks {
+    padding: 70px 0px;
+  }
+  .career_popup__container {
+    padding: 0px 50px;
+  }
+  .career_bottom__button span {
     padding: 0;
   }
   .footer__flex {
@@ -7648,6 +7691,15 @@ html.has-scroll-dragging {
     width: 100%;
     padding: 0;
   }
+  .career_popup__container {
+    padding: 0px 40px;
+  }
+  .career_popup__head {
+    padding: 0px 0px 40px;
+  }
+  .career_bottom__button span {
+    padding: 0;
+  }
   .footer__flex {
     padding: 0 0 130px;
   }
@@ -7933,6 +7985,19 @@ html.has-scroll-dragging {
   .career__right {
     width: 100%;
     padding: 0;
+  }
+  .career_popup__blocks {
+    padding: 80px 0px;
+  }
+  .career_popup__container {
+    padding: 0px 30px;
+  }
+  .career_bottom__button span {
+    padding: 0;
+  }
+  .form__policy {
+    flex-direction: column;
+    align-items: flex-start;
   }
   .footer__button_up {
     padding: 0;
