--- a/css/style.css
+++ b/css/style.css
@@ -6376,19 +6376,11 @@ html.has-scroll-dragging {
   background-color: var(--bg);
 }
 
-.price__item {
-  
-}
-
 .price__sublist {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   justify-content: space-between;
-}
-
-.price__item:first-child .price__sublist {
-  margin: 0 0 -20px;
 }
 
 .price__item_block {
@@ -6402,6 +6394,7 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: max-content;
   position: relative;
   -webkit-transform: translateY(5px);
   transform: translateY(5px);
@@ -6411,7 +6404,6 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 15%;
   flex-direction: column;
   justify-content: flex-end;
   gap: 20px;
@@ -6421,8 +6413,12 @@ html.has-scroll-dragging {
   width: 23%;
 }
 
-.price__subitem:nth-child(2) {
-  width: 17%;
+.price__swiper .price__subitem:nth-child(1) {
+  width: 20%;
+}
+
+.price__swiper .price__subitem {
+  width: 20%;
 }
 
 .price__info svg {
@@ -6442,7 +6438,7 @@ html.has-scroll-dragging {
   gap: 8px;
   position: absolute;
   left: 50%;
-  bottom: 36px;
+  bottom: 30px;
   z-index: 1;
   opacity: 0;
   background-color: var(--bg);
@@ -6484,6 +6480,10 @@ html.has-scroll-dragging {
   visibility: visible;
   -webkit-transition-delay: 0s, 0s;
   transition-delay: 0s, 0s;
+}
+
+.price__swiper {
+  width: 80%;
 }
 
 /* end price */
@@ -6830,6 +6830,30 @@ html.has-scroll-dragging {
   .career_popup__container,
   .feedback_popup__container {
     padding: 0px 60px;
+  }
+  .price__block {
+    padding: 140px 60px;
+  }
+  .price__list {
+    padding: 100px 60px;
+  }
+  .price__list {
+    gap: 30px;
+  }
+  .price__subitem {
+    gap: 10px;
+  }
+  .price__subitem:nth-child(1) {
+    width: 35%;
+  }
+  .price__swiper {
+    width: 65%;
+  }
+  .price__swiper .price__subitem:nth-child(1) {
+    width: 30%;
+  }
+  .price__swiper .price__subitem {
+    width: 17.5%;
   }
   .footer__list,
   .footer__social {
@@ -7341,6 +7365,18 @@ html.has-scroll-dragging {
   .career_bottom__button span,
   .feedback_bottom__button span {
     padding: 0;
+  }
+  .price__block {
+    padding: 60px 30px;
+  }
+  .price__list {
+    padding: 40px 30px;
+  }
+  .price__subitem:nth-child(1) {
+    width: 40%;
+  }
+  .price__swiper {
+    width: 60%;
   }
   .footer__flex {
     padding: 0 0 90px;
@@ -7932,6 +7968,13 @@ html.has-scroll-dragging {
   .career_popup__head,
   .feedback_popup__head {
     padding: 0px 0px 40px;
+  }
+  .price__subitem:nth-child(1),
+  .price__swiper {
+    width: 50%;
+  }
+  .price__swiper .price__subitem {
+    text-align: right;
   }
   .footer__flex {
     padding: 0 0 130px;
